--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Zimmple ofrece servicios de consultoría integral en logística, optimizando procesos y mejorando la eficiencia en Argentina.">
+  <meta name="keywords" content="consultoría logística, logística Argentina, optimización procesos, Zimmple">
+  <meta name="author" content="Zimmple">
+  <meta name="language" content="es">
   <title>Zimmple - Consultoría Integral Logística</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -16,7 +20,7 @@
 </head>
 
 <body class="bg-white text-gray-800">
-  <a href="https://wa.me/1234567890" target="_blank" class="whatsapp-btn">
+  <a href="https://wa.me/543564466064" target="_blank" class="whatsapp-btn">
     <i class="fab fa-whatsapp text-2xl"></i>
   </a>
 
@@ -81,7 +85,6 @@
     <div class="carousel-dots" id="carousel-dots"></div>
   </section>
 
-  <!-- Vision Section -->
   <section id="vision" class="py-20 bg-white" data-aos="fade-right">
     <div class="container mx-auto max-w-7xl px-6 flex flex-col md:flex-row items-center gap-8">
       <div class="md:w-1/2">
@@ -96,7 +99,6 @@
     </div>
   </section>
 
-  <!-- Mission Section -->
   <section id="mission" class="pb-20 bg-gradient-section" data-aos="fade-left">
     <div class="container mx-auto max-w-7xl px-6 flex flex-col md:flex-row-reverse items-center gap-8">
       <div class="md:w-1/2 text-right">
@@ -111,7 +113,6 @@
     </div>
   </section>
 
-  <!-- Solutions Section -->
   <section style="background-image: url(images/fondo.png);" id="solutions" class="py-20 bg-white bg-cover bg-center"
     data-aos="fade-up">
     <div class="container mx-auto max-w-7xl px-6">
@@ -145,7 +146,6 @@
     </div>
   </section>
 
-  <!-- Clients Section (Confían en Nosotros) -->
   <section id="clients" class="py-20 bg-gradient-section" data-aos="fade-up">
     <div class="container mx-auto max-w-7xl px-6">
       <h2 class="text-4xl font-bold text-secondary mb-10 text-center">Confían en Nosotros</h2>
@@ -169,7 +169,6 @@
     </div>
   </section>
 
-  <!-- Challenges Section -->
   <section id="challenges" class="py-20 bg-white" data-aos="fade-up">
     <div class="container mx-auto max-w-7xl px-6">
       <h2 class="text-4xl font-bold text-secondary mb-10 text-center">¿Tienes estos desafíos?</h2>
@@ -196,7 +195,6 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
   <section id="contact" style="background-image: url(images/fondo2.png);"
       class="bg-cover bg-center pb-6 bg-gradient-section" data-aos="fade-up">
     <div class="container mx-auto max-w-7xl px-6">
@@ -290,7 +288,6 @@
       </div>
     </div>
 
-    <!-- Footer -->
     <footer class="text-secondary mt-20 border-gray-200" data-aos="fade-up">
       <div class="container mx-auto max-w-7xl px-6 text-center">
         <img src="./images/logocolor.png" alt="Zimmple Consultora Integral en Logística Logo" class="h-16 mx-auto mb-4">
@@ -300,14 +297,12 @@
   </section>
 
   <script>
-    // Initialize AOS
     AOS.init({
       duration: 800,
       easing: 'ease-in-out',
       once: true
     });
 
-    // Smooth scrolling for navigation links
     document.querySelectorAll('a[href^="#"]').forEach(anchor => {
       anchor.addEventListener('click', function (e) {
         e.preventDefault();
@@ -317,21 +312,18 @@
       });
     });
 
-    // Hamburger menu toggle
     const hamburger = document.querySelector('.hamburger');
     const navLinks = document.querySelector('.nav-links');
     hamburger.addEventListener('click', () => {
       navLinks.classList.toggle('active');
     });
 
-    // Form submission handler
     function handleSubmit(event) {
       event.preventDefault();
       alert('¡Mensaje enviado! Nos contactaremos pronto.');
       event.target.reset();
     }
 
-    // Hero Carousel functionality
     let currentSlide = 0;
     const slides = document.querySelectorAll('.carousel-item');
     const dotsContainer = document.getElementById('carousel-dots');
@@ -361,14 +353,10 @@
       currentSlide = (currentSlide + 1) % slides.length;
       goToSlide(currentSlide);
     }
-
-    // Auto-scroll hero carousel every 5 seconds
     setInterval(nextSlide, 5000);
 
-    // Initialize hero carousel
     updateDots();
 
-    // Navigation scroll effect
     const nav = document.querySelector('nav');
     const heroSection = document.querySelector('#home');
 
